--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
 <!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -14,36 +10,29 @@
 
     </head>
     <body>
-        <div class="">
-            <div class="">
-                <article>
-                    <header>
-                        <h1>article header h1</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
-                    </header>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <section>
-                        <h2>article section h2</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
-                    </section>
-                    <footer>
-                        <h3>article footer h3</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
-                    </footer>
-                </article>
+        <h1>Our Menu </h1>
+        <div class="row">
 
-                <aside>
-                    <h3>aside</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices.</p>
-                </aside>
+            <div class="container  col-lg-4 col-md-5">
+              <h2 class="chicken">Chicken </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum lacinia leo, a hendrerit odio commodo a. Integer convallis convallis enim dictum tincidunt. Suspendisse potenti.
+                 Nunc eget dui id sapien laoreet facilisis ac nec lectus.
+              </p>
+            </div>
+            <div class="container  col-lg-4 col-md-5">
+              <h2 class="beef">Beef </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum lacinia leo, a hendrerit odio commodo a. Integer convallis convallis enim dictum tincidunt. Suspendisse potenti.
+                 Nunc eget dui id sapien laoreet facilisis ac nec lectus.
+              </p>
 
-            </div> <!-- #main -->
-        </div> <!-- #main-container -->
+            </div>
+            <div class="container col-lg-4 col-md-10">
+              <h2 class="sushi">Sushi </h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dictum lacinia leo, a hendrerit odio commodo a. Integer convallis convallis enim dictum tincidunt. Suspendisse potenti.
+                 Nunc eget dui id sapien laoreet facilisis ac nec lectus.
+               </p>
 
-
-
+            </div>
+        </div>
     </body>
 </html>
